remove scheduled for removal API and Deprecated API